[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menus/run/gold_icon.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/shop/button_with_icon.gd" type="Script" id=3]

[node name="ButtonWithIcon" type="Button"]
margin_left = 591.0
margin_right = 621.0
margin_bottom = 82.0
theme = ExtResource( 2 )
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="ColorRect" parent="HBoxContainer"]
margin_right = 12.0
margin_bottom = 82.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 16.0
margin_top = 18.0
margin_right = 154.0
margin_bottom = 63.0
text = "dfgdfg"
valign = 1

[node name="GoldIcon" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 158.0
margin_right = 222.0
margin_bottom = 82.0
mouse_filter = 2

[connection signal="focus_entered" from="." to="." method="_on_ButtonWithIcon_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ButtonWithIcon_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ButtonWithIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ButtonWithIcon_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ButtonWithIcon_pressed"]
